fixed clipboard button not being properly visible on all themes. resolves #293 also fixed #246 while we're at it

--- a/piggy/static/css/themes/dark.css
+++ b/piggy/static/css/themes/dark.css
@@ -13,9 +13,6 @@ preview_style: background: linear-gradient(90deg, rgb(24, 29, 34), #000000); col
   --piggy-neutral: #7a828a;
   --piggy-dark: rgb(17, 21, 25);
 
-  --piggy-code: #eecf98;
-  --piggy-code-bg: #3a3836;
-
   --piggy-text-main: var(--piggy-light);
   --piggy-text-light: var(--piggy-light);
   --piggy-text-neutral: #aeb3b9;
